--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -18,7 +18,7 @@ on:
 
 env:
   REPO_URL: https://github.com/hanimeia/istoreos-1/tree/istoreos-24.10.0
-  REPO_BRANCH: master
+  REPO_BRANCH: istoreos-24.10.0
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: .config
   DIY_P1_SH: diy-part1.sh
