--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -13,7 +13,7 @@
 name: Update Checker
 
 env:
-  REPO_URL: https://github.com/hanimeia/istoreos-1/tree/istoreos-24.10.0
+  REPO_URL: https://github.com/hanimeia/istoreos-1.git
   REPO_BRANCH: istoreos-24.10.0
 
 on:
